--- a/src/assets/less/styles.less
+++ b/src/assets/less/styles.less
@@ -7,6 +7,6 @@
 // @import "~admin-lte/plugins/select2/select2.css";
 
 // 项目
-@import "common.less";
+@import "_common.less";
 @import "../plugins/popup/less/_popup.less";
 
