--- a/src/assets/less/styles.less
+++ b/src/assets/less/styles.less
@@ -1,3 +1,7 @@
+@import '~less-lib';
+@import (inline) '~less-lib/less/normalize.css';
+@import '_common.less';
+
 // UI 框架
 // @import "~admin-lte/bootstrap/css/bootstrap.css";
 // @import "~admin-lte/build/less/AdminLTE.less";
@@ -7,6 +11,5 @@
 // @import "~admin-lte/plugins/select2/select2.css";
 
 // 项目
-@import "_common.less";
 @import "../plugins/popup/less/_popup.less";
 
