--- a/src/assets/plugins/popup/less/_popup.less
+++ b/src/assets/plugins/popup/less/_popup.less
@@ -44,7 +44,7 @@
 		}
 
 		&.popup-loading .popup-icon {
-			.loading(loading, #fff, 30px);
+			.loading(#fff, 30px);
 			margin: 0 auto;
 		}
 		&.popup-done .popup-icon {
