--- a/src/assets/less/_common.less
+++ b/src/assets/less/_common.less
@@ -1,7 +1,3 @@
-@charset "UTF-8";
-@import "_config.less";
-@import "_normalize.less";
-
 html { -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; }
 body, dl, dd, h1, h2, h3, h4, h5, h6, p, form, input { margin: 0; }
 ul, ol { margin: 0; padding: 0; list-style: none; }
@@ -34,7 +30,7 @@ a { .acl(@lkcl); }
 .wrap {
 	width: @min_width - 20px;
 	padding: 0 10px;
-	.blhc();
+	.cxbl();
 }
 
 .opacity-img {
