--- a/src/assets/less/styles.less
+++ b/src/assets/less/styles.less
@@ -3,6 +3,7 @@
 @import '_common.less';
 
 // UI 框架
+// @import "~bootstrap/dist/css/bootstrap.css";
 // @import "~admin-lte/bootstrap/css/bootstrap.css";
 // @import "~admin-lte/build/less/AdminLTE.less";
 @import "../font/font-awesome-4.7.0/css/font-awesome.css";
