--- a/src/assets/less/_common.less
+++ b/src/assets/less/_common.less
@@ -7,7 +7,7 @@ img { max-width: 100%; }
 body {
 	.fix;
 	position: relative;
-	font-family: @ft, @ftdef;
+	font-family: @ftdef;
 	font-size: @ftsz;
 	background-color: @bgcl;
 	color: @ftcl;
