--- a/src/assets/less/styles.less
+++ b/src/assets/less/styles.less
@@ -1,5 +1,6 @@
 @import '~less-lib';
 @import (inline) '~less-lib/less/normalize.css';
+@import '_variables.less';
 @import '_common.less';
 
 // UI 框架
