--- a/src/assets/less/styles.less
+++ b/src/assets/less/styles.less
@@ -7,7 +7,7 @@
 // @import "~bootstrap/dist/css/bootstrap.css";
 // @import "~admin-lte/bootstrap/css/bootstrap.css";
 // @import "~admin-lte/build/less/AdminLTE.less";
-@import "../font/font-awesome-4.7.0/css/font-awesome.css";
+@import "../font/font-awesome-4.7.0/less/font-awesome.less";
 
 // 插件
 // @import "~admin-lte/plugins/select2/select2.css";
