--- a/src/assets/less/_variables.less
+++ b/src/assets/less/_variables.less
@@ -32,14 +32,14 @@
 // 超小屏幕（手机）
 @screen_ss_max: (@screen_xs - 1);
 
-@ftdef: Helvetica, Arial, Verdana, sans-serif;  //页面默认备用字体
+@ftdef: Avenir, Helvetica, Arial, Verdana, sans-serif;  //页面默认备用字体
 @ft: Microsoft YaHei;  //页面默认首选字体（微软雅黑）
 @ft2: SimSun;  //常用字体2（宋体）
 @ft3: SimHei;  //常用字体3（黑体）
 @ft4: Arial;  //常用字体4
 @ft5: Impact;  //常用字体5
 @ftsz: 14px;  //页面默认字体大小
-@min_width: 1024px; //页面最小宽度
+@max_width: 750px; //页面最大宽度
 
 // 页面常用色
 @ftcl: #333;  //常用字体颜色（黑）
@@ -50,3 +50,9 @@
 @bgcl2: #eee;  //页面背景颜色（暗白）
 @bgcl3: #e5e5e5;  //页面背景颜色（淡灰）
 @lkcl: #05a;  //页面默认链接颜色（蓝）
+
+
+// 自定义变量
+@yellow: #ffcc00;
+@topBar_height: .8rem;  // topBar高度
+@tabBar_height: .9rem;  // tabBar高度
