--- a/src/assets/less/styles.less
+++ b/src/assets/less/styles.less
@@ -4,14 +4,8 @@
 @import '_common.less';
 
 // UI 框架
-// @import "~bootstrap/dist/css/bootstrap.css";
-// @import "~admin-lte/bootstrap/css/bootstrap.css";
-// @import "~admin-lte/build/less/AdminLTE.less";
 @import "../font/font-awesome-4.7.0/less/font-awesome.less";
 
-// 插件
-// @import "~admin-lte/plugins/select2/select2.css";
-
 // 项目
-@import "../plugins/popup/less/_popup.less";
+@import "../plugins/popup/_popup.less";
 
