--- a/src/assets/less/_common.less
+++ b/src/assets/less/_common.less
@@ -2,17 +2,24 @@ html { -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; }
 body, dl, dd, h1, h2, h3, h4, h5, h6, p, form, input { margin: 0; }
 ul, ol { margin: 0; padding: 0; list-style: none; }
 i, em { font-style: normal; }
-img { max-width: 100%; }
+
+// 这里不要添加 max-height: 100%，因为在有些手机上，如果图片的父级没有高度，就会导致图片高度变得很小
+img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 100%;
+}
 
 body {
+	.fix();
 	position: relative;
-	font-family: @ftdef;
 	font-size: @ftsz;
 	background-color: @bgcl;
 	color: @ftcl;
-	.fix;
-	.wbw;
+	.wbw();
 }
+
 a { .acl(@lkcl); }
 
 // 常用类
@@ -28,39 +35,84 @@ a { .acl(@lkcl); }
 }
 
 .wrap {
-	width: @min_width - 20px;
-	padding: 0 10px;
+	padding-left: 10px;
+	padding-right: 10px;
 	.cxbl();
+}
+
+.share-img {
+	position: absolute;
+	width: 0;
+	height: 0;
+	opacity: 0;
+	overflow: hidden;
 }
 
 .opacity-img {
 	.transition(opacity .3s);
-	.active({ .op(.8) !important; });
+	.hover-or-active({ .op(.8) !important; });
 }
 
 .shadow-box {
 	.transition(box-shadow .3s);
-	.active({
-		.bxsd(box) !important;
-	});
+	.hover-or-active({ .bxsd(box) !important; });
 }
 
-
-@media screen and (max-width: @screen_xs_max) { // 小屏幕（手机）
-
+.directload img[data-src],
+.lazyload img[data-src] {
+	.loading2(#999, auto);
+	background-size: 30px 30px;
 }
-@media screen and (max-width: @screen_ss_max) { // 超小屏幕（手机）
 
+.apple-blur {
+	.bgcl(fade(#fff, 90%));
 }
-@media screen and (min-width: @screen_sm_min) { // 除小屏幕以外（非手机）
 
+@supports (-webkit-backdrop-filter: none) {
+	.apple-blur {
+		background-color: rgba(255,255,255,.5);
+		-webkit-backdrop-filter: saturate(180%) blur(20px);
+	}
 }
-@media screen and (min-width: @screen_sm_min) and (max-width: @screen_sm_max) { // 中小屏幕（平板）
 
-}
-@media screen and (min-width: @screen_md_min) and (max-width: @screen_md_max) { // 中等屏幕（笔记本）
+.screen-pc-big({
+	.wrap {
+		width: @screen_xl - 20px;
+	}
+});
 
-}
-@media screen and (min-width: @screen_lg_min) { // 大屏幕（桌面）
+.screen-pc({
+	body {
+		min-width: @screen_lg;
+	}
 
-}
+	.wrap {
+		width: @screen_lg - 20px;
+	}
+
+	.only-mobile {
+		display: none !important;
+	}
+});
+
+.screen-mobile({
+	body {
+		min-width: 0;
+	}
+
+	.wrap {
+		width: auto;
+	}
+
+	.only-pc {
+		display: none !important;
+	}
+});
+
+.screen-mobile-middle({
+
+});
+
+.screen-mobile-small({
+
+});
