--- a/src/assets/less/styles.less
+++ b/src/assets/less/styles.less
@@ -2,6 +2,7 @@
 @import (inline) '~less-lib/less/normalize.css';
 @import '_variables.less';
 @import '_common.less';
+@import '_prefab.less';
 
 // UI 框架
 @import "../font/font-awesome-4.7.0/less/font-awesome.less";
