--- a/src/assets/less/_common.less
+++ b/src/assets/less/_common.less
@@ -2,18 +2,24 @@ html { -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; }
 body, dl, dd, h1, h2, h3, h4, h5, h6, p, form, input { margin: 0; }
 ul, ol { margin: 0; padding: 0; list-style: none; }
 i, em { font-style: normal; }
-img { max-width: 100%; }
+
+// 这里不要添加 max-height: 100%，因为在有些手机上，如果图片的父级没有高度，就会导致图片高度变得很小
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+}
 
 body {
-	position: relative;
-	font-family: @ftdef;
-	font-size: @ftsz;
-	background-color: @bgcl;
-	color: @ftcl;
-	.fix;
-	.wbw;
-    font-weight: 100;
+    .fix();
+    position: relative;
+    font-size: @ftsz;
+    background-color: @bgcl;
+    color: @ftcl;
+    .wbw();
 }
+
 a { .acl(@lkcl); }
 
 // 常用类
@@ -21,56 +27,92 @@ a { .acl(@lkcl); }
 .none, [v-cloak] { display: none !important; }
 
 .noa {
-	.acl(none);
+    .acl(none);
 }
 
 .full {
-	width: 100% !important;
+    width: 100%;
+}
+
+.wrap {
+    padding-left: 10px;
+    padding-right: 10px;
+    .cxbl();
+}
+
+.share-img {
+    position: absolute;
+    width: 0;
+    height: 0;
+    opacity: 0;
+    overflow: hidden;
 }
 
 .opacity-img {
-	.transition(opacity .3s);
-	.active({ .op(.8) !important; });
+    .transition(opacity .3s);
+    .hover-or-active({ .op(.8) !important; });
 }
 
 .shadow-box {
-	.transition(box-shadow .3s);
-	.active({
-		.bxsd(box) !important;
-	});
+    .transition(box-shadow .3s);
+    .hover-or-active({ .bxsd(box) !important; });
 }
 
-.button {
-    .button-cube(@yellow, 16px);
-    font-weight: normal;
+.directload img[data-src],
+.lazyload img[data-src] {
+    .loading2(#999, auto);
+    background-size: 30px 30px;
+}
 
-    &.small {
-        .button-cube(@yellow, 12px);
-        font-weight: normal;
+.apple-blur {
+    .bgcl(fade(#fff, 90%));
+}
+
+@supports (-webkit-backdrop-filter: none) {
+    .apple-blur {
+        background-color: rgba(255,255,255,.5);
+        -webkit-backdrop-filter: saturate(180%) blur(20px);
+    }
+}
+
+.screen-pc-big({
+    .wrap {
+        width: @screen_xl - 20px;
+    }
+});
+
+.screen-pc({
+    body {
+        min-width: @screen_lg;
     }
 
-    &.big {
-        .button-cube(@yellow, 20px);
-        font-weight: normal;
+    .wrap {
+        width: @screen_lg - 20px;
     }
-}
 
+    .only-mobile {
+        display: none !important;
+    }
+});
 
-@media screen and (max-width: @screen_xs_max) { // 小屏幕（手机）
+.screen-mobile({
+    body {
+        min-width: 0;
+    }
 
-}
-@media screen and (max-width: @screen_ss_max) { // 超小屏幕（手机）
+    .wrap {
+        width: auto;
+    }
 
-}
-@media screen and (min-width: @screen_sm_min) { // 除小屏幕以外（非手机）
+    .only-pc {
+        display: none !important;
+    }
+});
 
-}
-@media screen and (min-width: @screen_sm_min) and (max-width: @screen_sm_max) { // 中小屏幕（平板）
+.screen-mobile-middle({
 
-}
-@media screen and (min-width: @screen_md_min) and (max-width: @screen_md_max) { // 中等屏幕（笔记本）
+});
 
-}
-@media screen and (min-width: @screen_lg_min) { // 大屏幕（桌面）
+.screen-mobile-small({
 
-}
+});
