--- a/src/assets/less/styles.less
+++ b/src/assets/less/styles.less
@@ -13,5 +13,5 @@
 // @import "~admin-lte/plugins/select2/select2.css";
 
 // 项目
-@import "../plugins/popup/less/_popup.less";
+@import "../plugins/popup/_popup.less";
 
